# zola-precommit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  update-modified.sh
.github/workflows/: auto-upgrade.yml  ci.yml
test/: index.md
